[gd_scene load_steps=11 format=3 uid="uid://6awtsapo231u"]

[ext_resource type="Script" uid="uid://ca5k1dui1xqg1" path="res://ui/hud.gd" id="1_ahhtf"]
[ext_resource type="FontFile" uid="uid://bemr8f53d5p6y" path="res://assets/fonts/Kenney Space.ttf" id="2_7ihmi"]
[ext_resource type="LabelSettings" uid="uid://c0ap0tl6vobp3" path="res://ui/hud_label.tres" id="3_546lt"]
[ext_resource type="LabelSettings" uid="uid://dm1nnmjndo0yo" path="res://ui/hud_label_off.tres" id="4_7ihmi"]
[ext_resource type="Texture2D" uid="uid://dwa1ltd72v5un" path="res://assets/sprites/rank041.png" id="4_en2x2"]
[ext_resource type="StyleBox" uid="uid://cg8cbu0vp8dvm" path="res://ui/power_bar_fill_style_max.tres" id="4_q43x7"]
[ext_resource type="StyleBox" uid="uid://by2kftqgpoyel" path="res://ui/power_bar_fill_style.tres" id="6_srpbi"]

[sub_resource type="LabelSettings" id="LabelSettings_1v5rv"]
font = ExtResource("2_7ihmi")
font_color = Color(1, 0.960784, 0.839216, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.34902)

[sub_resource type="SystemFont" id="SystemFont_ahhtf"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v5rv"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.960784, 0.839216, 1)
anti_aliasing = false

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ahhtf")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_right = 190.0
offset_bottom = 45.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4

[node name="Player1" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "P1"
label_settings = SubResource("LabelSettings_1v5rv")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
columns = 6

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ahhtf")
theme_override_font_sizes/font_size = 32
text = "SCORE:"
label_settings = ExtResource("3_546lt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ahhtf")
theme_override_font_sizes/font_size = 32
text = "     0"
label_settings = ExtResource("3_546lt")
horizontal_alignment = 1

[node name="Spacer8" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ahhtf")
theme_override_font_sizes/font_size = 32
label_settings = ExtResource("3_546lt")
horizontal_alignment = 1

[node name="CaptureLabel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "capture:"
label_settings = ExtResource("3_546lt")

[node name="CapturePowerBarP1" type="ProgressBar" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_1v5rv")
theme_override_styles/fill = ExtResource("4_q43x7")
max_value = 4.0
step = 1.0
show_percentage = false

[node name="RankCapturePowerP1" type="TextureRect" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_en2x2")
expand_mode = 2
stretch_mode = 5

[node name="PercentageLabel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ahhtf")
theme_override_font_sizes/font_size = 32
text = "CAPTURED:"
label_settings = ExtResource("3_546lt")
vertical_alignment = 1

[node name="PercentageValue" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ahhtf")
theme_override_font_sizes/font_size = 32
text = "0%"
label_settings = ExtResource("3_546lt")
horizontal_alignment = 2

[node name="Spacer7" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ahhtf")
theme_override_font_sizes/font_size = 32
text = "    "
label_settings = ExtResource("3_546lt")
horizontal_alignment = 1

[node name="LaserLabel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "laser:"
label_settings = ExtResource("3_546lt")
horizontal_alignment = 2

[node name="LaserPowerBarP1" type="ProgressBar" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_1v5rv")
theme_override_styles/fill = ExtResource("6_srpbi")
max_value = 4.0
step = 1.0
show_percentage = false

[node name="RankLaserPowerP1" type="TextureRect" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("4_en2x2")
expand_mode = 2
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
visible = false
layout_mode = 2

[node name="PowerupContainer" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RankCapturePowerP2" type="TextureRect" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="LaserLevel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer" groups=["laser_power_p1"]]
unique_name_in_owner = true
layout_mode = 2
text = "L"
label_settings = ExtResource("4_7ihmi")

[node name="LaserLevel2" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer" groups=["laser_power_p1"]]
unique_name_in_owner = true
layout_mode = 2
text = "L"
label_settings = ExtResource("4_7ihmi")

[node name="LaserLevel3" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer" groups=["laser_power_p1"]]
unique_name_in_owner = true
layout_mode = 2
text = "L"
label_settings = ExtResource("4_7ihmi")

[node name="PowerupContainer2" type="HBoxContainer" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RankLaserPowerP1" type="TextureRect" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer2"]
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="CaptureLevel" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer2" groups=["capture_power_p1"]]
unique_name_in_owner = true
layout_mode = 2
text = "C"
label_settings = ExtResource("4_7ihmi")

[node name="CaptureLevel2" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer2" groups=["capture_power_p1"]]
unique_name_in_owner = true
layout_mode = 2
text = "C"
label_settings = ExtResource("4_7ihmi")

[node name="CaptureLevel3" type="Label" parent="CanvasLayer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer/VBoxContainer/PowerupContainer2" groups=["capture_power_p1"]]
unique_name_in_owner = true
layout_mode = 2
text = "C"
label_settings = ExtResource("4_7ihmi")
